piblished to pub spec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mdiwindow
-description: A new Flutter package project.
+description: Similar features as Winforms MDI Container.
 version: 0.0.1
 homepage:
 
